<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ornis</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="local.juraph@gmail.com">juraph</maintainer>
  <license>TODO: License declaration</license>

  <depend>rcl</depend>
  <depend>rcl_action</depend>
  <depend>rcl_interfaces</depend>

  <depend>Poco</depend> <!-- TODO: Remove -->

  <depend>rosidl_runtime_cpp</depend>
  <depend>rosidl_generator_cpp</depend>
  <depend>rosidl_typesupport_cpp</depend>
  <depend>rosidl_typesupport_introspection_cpp</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <!-- <test_depend>ament_lint_common</test_depend> -->

  <!-- add test dependencies on any linter, e.g. -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
